@@ -413,12 +413,14 @@ void DTrack::resize_curDigital(int n)
 void DTrack::resize_curAnalog(int n)
 {
 	int nsize = (int )curAnalog.size();
+	float fn;
 
 	if(n > nsize){
 		curAnalog.resize(n);
 
 		for(int i=nsize; i<n; i++){  // set default for new elements
-			curAnalog[i] = 0.0f;
+			this->normalizeMinToMax(0, fn);
+			curAnalog[i] = fn;
 			curAnalog[i].setTime();
 		}
 	}
