@@ -130,7 +130,11 @@ void TrackdController::updateData()
 
    for (int j=0;j<mTrackdController->numValuators();j++)
    {
-       mCurValuators[j] = mTrackdController->getValuator(j);
+       // TrackdController doesn't have a sample, so we do
+       // normalization here...
+       float f;
+       this->normalizeMinToMax (mTrackdController->getValuator(j), f);
+       mCurValuators[j] = f;
        mCurValuators[j].setTime();
    }
 
