@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jun-19-2010 patrick     Reverted the change to gadgt::AnalogProxy that allowed
+                        access to the raw device data. This change broke the
+                        use of analog devices in a cluster configuration.
+                        NEW VERSION: 1.3.32
 Jun-19-2010 patrick     Added an "auto-return" feature to simulated analog
                         devices.
                         Submitted by Carsten Neumann.
